--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <script src="js/bundle/sir_model.js" type="text/javascript"></script>
    <script src="js/papaparse.min.js" type="text/javascript"></script>
    <script src="js/chartjs-plugin-annotation.min.js" type="text/javascript"></script>
+   <script src="js/controls.js" type="text/javascript"></script>
    <style>
       canvas {
          -moz-user-select: none;
@@ -127,33 +128,33 @@
       var contacts_per_person_per_day = 8;
       var infection_rate_per_contact = 0.06;
       var days_infectious = 5;
-      var initially_infected = parseInt(past_confirmed[past_confirmed.length-1]);
-      var initially_recovered = parseInt(past_recovered[past_recovered.length-1]);
+      var seniors = 17880000;
+      var students = 10906300;
+      var household = 2;
+
+      var initially_infected = parseInt(past_confirmed[past_confirmed.length - 1]);
+      var initially_recovered = parseInt(past_recovered[past_recovered.length - 1]);
 
       var t_past = 20;
-      var t_future = 10;
+      var t_future = 300;
 
-      var result = sirModel(contacts_per_person_per_day, infection_rate_per_contact,
-         days_infectious, population_size, initially_infected,
-         initially_recovered, t_future);
-      var base_pred = result[1];
+      function runScenario(social_distancing, handwashing, schools_closed, risk_groups_isolated, quarantine, masks) {
+         new_params = updateVariables(contacts_per_person_per_day, infection_rate_per_contact,
+            population_size, seniors, students, household, social_distancing, handwashing, schools_closed, risk_groups_isolated, quarantine, masks);
+         var result = sirModel(new_params[0], new_params[1],
+            days_infectious, population_size, initially_infected,
+            initially_recovered, t_future);
+         return result[1];
+      }
 
-      result = sirModel(contacts_per_person_per_day, 0.9*infection_rate_per_contact,
-         days_infectious, population_size, initially_infected,
-         initially_recovered, t_future);
-      var scen1_pred = result[1];
 
-      result = sirModel(contacts_per_person_per_day, 0.8*infection_rate_per_contact,
-         days_infectious, population_size, initially_infected,
-         initially_recovered, t_future);
-      var scen2_pred = result[1];
 
-      result = sirModel(contacts_per_person_per_day, 0.7*infection_rate_per_contact,
-         days_infectious, population_size, initially_infected,
-         initially_recovered, t_future);
-      var scen3_pred = result[1];
+      var base_pred = runScenario(false, false, false, false, false, false);
+      var scen1_pred = runScenario(true, false, true, false, false, false);
+      var scen2_pred = runScenario(true, true, true, false, false, false);
+      var scen3_pred = runScenario(false, false, false, false, true, false);
 
-      var past_empty = new Array(t_past-1);
+      var past_empty = new Array(t_past - 1);
       past_empty.push(initially_infected);
       var future_empty = new Array(t_future);
 
@@ -210,9 +211,9 @@
                intersect: false,
             },
             legend: {
-               onClick: function(e) {
-                  e.stopPropagation();
-               }
+               //onClick: function(e) {
+                  //e.stopPropagation();
+               //}
             },
             hover: {
                mode: 'nearest',
